--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
         "titleBar.inactiveBackground": "#146a9399",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#146A93"
+    "peacock.color": "#146A93",
+    "liveServer.settings.port": 5501
 }
