--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#1a1a1a",
-        "activityBar.background": "#1a1a1a",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#606020",
+        "activityBar.activeBackground": "#2bace9",
+        "activityBar.background": "#2bace9",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#ca1590",
         "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#1a1a1a",
-        "statusBar.background": "#000000",
+        "sash.hoverBorder": "#2bace9",
+        "statusBar.background": "#1591cc",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#1a1a1a",
-        "statusBarItem.remoteBackground": "#000000",
+        "statusBarItem.hoverBackground": "#2bace9",
+        "statusBarItem.remoteBackground": "#1591cc",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#000000",
+        "titleBar.activeBackground": "#1591cc",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#00000099",
+        "titleBar.inactiveBackground": "#1591cc99",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "000000",
+    "peacock.color": "#1591CC",
     "liveServer.settings.port": 5502
 }
